--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,6 @@ services:
     restart: always
     ports:
       - 21056:5090
+  task-scheduler:
+    image: haitranquangofficial/graduation:task-scheduler
+    restart: always
